--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -66,7 +66,7 @@
   <%= link_to_function "<span> Add Ingredient </span>", "$$('.hidden')[0].removeClassName('hidden').show();",:class=>'squarebutton' %>
   <p>
   	<div class="upload_recipe">
-    <%= link_to_function "<span> Upload Recipe </span>", "$('new_recipe').submit();", :class=>'upload_recipe_button'%>
+    <%= link_to_function "<span> Upload Recipe </span>", "$('new_recipe').submit();", :class=>'upload_recipe_button', :id=>'Upload Recipe'%>
 	</div>
   </p>
 <% end %>
