--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -865,6 +865,30 @@ padding-bottom:10px;
 }
 
 /* Meal plans */
+
+/* Show Recipe */
+#show_meal_plan_header{
+	width:600px;
+}
+
+#show_meal_plan_left_header{
+	width:450px;
+	float:left;
+
+}
+
+#show_meal_plan_right_header{
+	width:150px;
+	float:right;
+	padding-top:20px;
+	padding-bottom:20px;
+}
+
+#show_meal_plan_divider{
+    width:600px;
+    height:100px;
+
+}
 .new_mealplan_title {
 	padding-bottom:30px;
 }
