Recipe directions show newlines

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -32,7 +32,7 @@
 	<div id="directions_column">
 		<h2>Directions</h2>
 		<div class="directions">
-			<%=h @recipe.directions %>
+			<%= simple_format(h @recipe.directions) %>
 		</div>
 	</div>
 		
