fix author's recipes

--- a/app/views/recipes/showMyRecipes.html.erb
+++ b/app/views/recipes/showMyRecipes.html.erb
@@ -1,4 +1,4 @@
-<h1 class="uploaded_recipes_title"> <%=current_user.username%>'s recipes </h1>
+<h1 class="uploaded_recipes_title"> <%=@user.username%>'s recipes </h1>
 
 <% @recipes.each do |recipe| %>
 <div class="uploaded_recipe">
