--- a/app/views/recipes/showMyRecipes.html.erb
+++ b/app/views/recipes/showMyRecipes.html.erb
@@ -11,12 +11,14 @@
 		</div>
 	</div>
 	<div class="uploaded_recipes_options">
-		<div class="buttonwrapper">
-			<%= link_to '<span> Delete </span>', recipe, :confirm => 'Are you sure?', :method => :delete, :class => 'squarebutton' %>
-		</div>
-		<div class="buttonwrapper">
-			<%= link_to '<span> Edit Recipe </span>', edit_recipe_path(recipe), :class => 'squarebutton' %>
-		</div>
+		<% if current_user == recipe.user %>
+			<div class="buttonwrapper">
+				<%= link_to '<span> Delete </span>', recipe, :confirm => 'Are you sure?', :method => :delete, :class => 'squarebutton' %>
+			</div>
+			<div class="buttonwrapper">
+				<%= link_to '<span> Edit Recipe </span>', edit_recipe_path(recipe), :class => 'squarebutton' %>
+			</div>
+		<% end %>
 	</div>
 </div>
 <% end %>
