Changed produce picture

--- a/app/views/recipe_lists/groceryList.html.erb
+++ b/app/views/recipe_lists/groceryList.html.erb
@@ -29,7 +29,7 @@
 		<% end %>
 	</div>
 	<div class="grocery_list_picture">
-		<%= image_tag ("../images/cornucopia.jpg") %>
+		<%= image_tag ("../images/produce.jpg") %>
 	</div>
 </div>
 <% end %>
