--- a/app/views/layouts/recipes.html.erb
+++ b/app/views/layouts/recipes.html.erb
@@ -3,6 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+  <link rel="shortcut icon" href="favicon.ico"/>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>FoodRun</title>
   <%= stylesheet_link_tag 'scaffold' %>
